2008-06-26  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* sys/v4l2/v4l2_calls.c::
	  Don't include unused gstv4l2xoverlay.h. Fixes build
	  in case where X11 headers are not installed.

2008-06-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/dv/gstdv.c: (plugin_init):
	Fix compilation.

2008-06-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/dv/gstdv.c: (plugin_init):
	Marking rank of dvdec as GST_RANK_MARGINAL since it's the slowest
	DV decoder available.
	Fixes #532393

2008-06-25  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_start):
	Call getsockname() after the call to bind() to get updated values
	for the port, etc. This fixes the usage of udpsrc on anonymous
	binding and it's usage by rtspsrc. Fixes bugs #539372, #539548.
	Thanks to Aurelien Grimaud for pointing out the obvious fix.

2008-06-25  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* tests/check/pipelines/wavpack.c: (bus_handler):
	Remove workaround for a bug in identity that is fixed in 0.10.20.

2008-06-25  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Jason Donenfeld <BugZilla at zx2c4 dot com>

	* ext/soup/gstsouphttpsrc.c: (gst_soup_http_src_got_headers_cb):
	Fix HTTP auth support with user/password passed via the URI.
	Fixes bug #540067.

2008-06-24  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	  Depend on released versions of core and -base.

2008-06-23  Julien Moutte  <julien@fluendo.com>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_read_track_encoding),
	(gst_matroska_demux_parse_blockgroup_or_simpleblock): Fix buggy
	format strings in macros. (makes it build on OS X again...)

2008-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/rtp/gstrtptheorapay.c:
	* gst/udp/gstmultiudpsink.c:
	  Added debug.

2008-06-20  Christian Schaller <christian.schaller@collabora.co.uk>

	* configure.ac: switch v4l2src over to the normal build instead of