@@ -1,3 +1,10 @@
+2008-06-27  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>
+
+	* gst/avi/gstavimux.c: (gst_avi_mux_riff_get_avi_header):
+	* gst/avi/gstavimux.h:
+	Add 8 bytes to current streamheader to make for a complete one
+	and to make more players happy.  Fixes #519460.
+
 2008-06-26  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	* sys/v4l2/v4l2_calls.c::
